# showimg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
build-aux/: moe.taoky.showimg.desktop  moe.taoky.showimg.yaml
src/: main.rs
src/window/: imp.rs  mod.rs
