[package]
name = "showimg"
version = "0.2.0"
edition = "2021"
description = "Show a picture without window decoration in Linux desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_4"] }
