[package]
name = "showimg-gtk"
version = "0.2.1"
edition = "2021"
description = "Show a picture without window decoration in Linux desktop"
exclude = ["assets/*", "build-aux/*", ".github/*", "libs/*", "repo/*", ".flatpak-builder/*"]
readme = "README.md"
license = "Unlicense"
categories = ["graphics"]
keywords = ["gtk", "desktop", "image", "picture"]
repository = "https://github.com/taoky/showimg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
gtk = { version = "0.9.5", package = "gtk4" }
anyhow = "1.0.95"
